# gitblend

./: .coverage  BRIEF.md  CLAUDE.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
gitblend/: __init__.py  blender_manifest.toml  properties.py  registration.py
gitblend/bpy_adapters/: context.py  jobs.py  paths.py  reports.py  startup.py
gitblend/domain/: enums.py  errors.py  models.py  result.py
gitblend/infrastructure/: auth_store.py  file_system.py  parser_git_log.py  parser_git_stash.py  parser_git_status.py  subprocess_runner.py
gitblend/operators/: _services.py  branch.py  commit.py  diagnostics.py  github.py  history.py  lfs.py  project.py  repos.py  restore.py  stash.py  sync.py
gitblend/services/: blender_project_service.py  diagnostics_service.py  git_service.py  github_service.py  lfs_service.py  snapshot_service.py
gitblend/ui/: dialogs.py  icons.py  lists.py  menus.py  panels.py
resources/templates/: gitattributes  gitignore
tests/: conftest.py
tests/integration/: test_git_service.py  test_lfs_service.py
tests/unit/: test_auth_store.py  test_blender_project_service.py  test_diagnostics_service.py  test_domain_result.py  test_git_service.py  test_parser_git_log.py  test_parser_git_status.py
tools/: bump_version.py  dev_install.py  package_extension.py
